--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -25,23 +25,23 @@
   </div>
   <div class="bs-customizer-input">
     <label for="input-@brand-primary">@brand-primary</label>
-    <input id="input-@brand-primary" type="text" value="#428bca" data-var="@brand-primary" class="form-control"/>
+    <input id="input-@brand-primary" type="text" value="#8db11d" data-var="@brand-primary" class="form-control"/>
   </div>
   <div class="bs-customizer-input">
     <label for="input-@brand-success">@brand-success</label>
-    <input id="input-@brand-success" type="text" value="#5cb85c" data-var="@brand-success" class="form-control"/>
+    <input id="input-@brand-success" type="text" value="#5bb75b" data-var="@brand-success" class="form-control"/>
   </div>
   <div class="bs-customizer-input">
     <label for="input-@brand-info">@brand-info</label>
-    <input id="input-@brand-info" type="text" value="#5bc0de" data-var="@brand-info" class="form-control"/>
+    <input id="input-@brand-info" type="text" value="#49afcd" data-var="@brand-info" class="form-control"/>
   </div>
   <div class="bs-customizer-input">
     <label for="input-@brand-warning">@brand-warning</label>
-    <input id="input-@brand-warning" type="text" value="#f0ad4e" data-var="@brand-warning" class="form-control"/>
+    <input id="input-@brand-warning" type="text" value="#f89406" data-var="@brand-warning" class="form-control"/>
   </div>
   <div class="bs-customizer-input">
     <label for="input-@brand-danger">@brand-danger</label>
-    <input id="input-@brand-danger" type="text" value="#d9534f" data-var="@brand-danger" class="form-control"/>
+    <input id="input-@brand-danger" type="text" value="#bd362f" data-var="@brand-danger" class="form-control"/>
   </div>
 </div>
 <h2 id="scaffolding">Scaffolding</h2>
@@ -58,12 +58,12 @@
   </div>
   <div class="bs-customizer-input">
     <label for="input-@link-color">@link-color</label>
-    <input id="input-@link-color" type="text" value="@brand-primary" data-var="@link-color" class="form-control"/>
+    <input id="input-@link-color" type="text" value="#72911F" data-var="@link-color" class="form-control"/>
     <p class="help-block">Global textual link color.</p>
   </div>
   <div class="bs-customizer-input">
     <label for="input-@link-hover-color">@link-hover-color</label>
-    <input id="input-@link-hover-color" type="text" value="darken(@link-color, 15%)" data-var="@link-hover-color" class="form-control"/>
+    <input id="input-@link-hover-color" type="text" value="@link-color" data-var="@link-hover-color" class="form-control"/>
     <p class="help-block">Link hover color set via <code>darken()</code> function.</p>
   </div>
 </div>
@@ -72,7 +72,7 @@
 <div class="row">
   <div class="bs-customizer-input">
     <label for="input-@font-family-sans-serif">@font-family-sans-serif</label>
-    <input id="input-@font-family-sans-serif" type="text" value="&quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif" data-var="@font-family-sans-serif" class="form-control"/>
+    <input id="input-@font-family-sans-serif" type="text" value="'myriad-pro', 'Segoe UI', Arial, Helvetica, sans-serif" data-var="@font-family-sans-serif" class="form-control"/>
   </div>
   <div class="bs-customizer-input">
     <label for="input-@font-family-serif">@font-family-serif</label>
@@ -89,7 +89,7 @@
   </div>
   <div class="bs-customizer-input">
     <label for="input-@font-size-base">@font-size-base</label>
-    <input id="input-@font-size-base" type="text" value="14px" data-var="@font-size-base" class="form-control"/>
+    <input id="input-@font-size-base" type="text" value="13px" data-var="@font-size-base" class="form-control"/>
   </div>
   <div class="bs-customizer-input">
     <label for="input-@font-size-large">@font-size-large</label>
@@ -101,19 +101,19 @@
   </div>
   <div class="bs-customizer-input">
     <label for="input-@font-size-h1">@font-size-h1</label>
-    <input id="input-@font-size-h1" type="text" value="floor((@font-size-base * 2.6))" data-var="@font-size-h1" class="form-control"/>
+    <input id="input-@font-size-h1" type="text" value="floor((@font-size-base * 2))" data-var="@font-size-h1" class="form-control"/>
   </div>
   <div class="bs-customizer-input">
     <label for="input-@font-size-h2">@font-size-h2</label>
-    <input id="input-@font-size-h2" type="text" value="floor((@font-size-base * 2.15))" data-var="@font-size-h2" class="form-control"/>
+    <input id="input-@font-size-h2" type="text" value="floor((@font-size-base * 1.8))" data-var="@font-size-h2" class="form-control"/>
   </div>
   <div class="bs-customizer-input">
     <label for="input-@font-size-h3">@font-size-h3</label>
-    <input id="input-@font-size-h3" type="text" value="ceil((@font-size-base * 1.7))" data-var="@font-size-h3" class="form-control"/>
+    <input id="input-@font-size-h3" type="text" value="ceil((@font-size-base * 1.6))" data-var="@font-size-h3" class="form-control"/>
   </div>
   <div class="bs-customizer-input">
     <label for="input-@font-size-h4">@font-size-h4</label>
-    <input id="input-@font-size-h4" type="text" value="ceil((@font-size-base * 1.25))" data-var="@font-size-h4" class="form-control"/>
+    <input id="input-@font-size-h4" type="text" value="ceil((@font-size-base * 1.2))" data-var="@font-size-h4" class="form-control"/>
   </div>
   <div class="bs-customizer-input">
     <label for="input-@font-size-h5">@font-size-h5</label>
@@ -135,7 +135,7 @@
   </div>
   <div class="bs-customizer-input">
     <label for="input-@headings-font-family">@headings-font-family</label>
-    <input id="input-@headings-font-family" type="text" value="inherit" data-var="@headings-font-family" class="form-control"/>
+    <input id="input-@headings-font-family" type="text" value="'myriad-pro-condensed', 'Segoe UI', Arial, Helvetica, sans-serif" data-var="@headings-font-family" class="form-control"/>
     <p class="help-block">By default, this inherits from the <code>&lt;body&gt;</code>.</p>
   </div>
   <div class="bs-customizer-input">
@@ -148,7 +148,7 @@
   </div>
   <div class="bs-customizer-input">
     <label for="input-@headings-color">@headings-color</label>
-    <input id="input-@headings-color" type="text" value="inherit" data-var="@headings-color" class="form-control"/>
+    <input id="input-@headings-color" type="text" value="rgb(152, 0, 0)" data-var="@headings-color" class="form-control"/>
   </div>
 </div>
 <h2 id="components">Components</h2>
@@ -572,12 +572,43 @@
     <p class="help-block">Point at which the navbar begins collapsing.</p>
   </div>
 </div>
+<h2 id="container-sizes">Container sizes</h2>
+<p>Define the maximum width of <code>.container</code> for different screen sizes.</p>
+<div class="row">
+  <div class="bs-customizer-input">
+    <label for="input-@container-tablet">@container-tablet</label>
+    <input id="input-@container-tablet" type="text" value="((720px + @grid-gutter-width))" data-var="@container-tablet" class="form-control"/>
+  </div>
+  <div class="bs-customizer-input">
+    <label for="input-@container-sm">@container-sm</label>
+    <input id="input-@container-sm" type="text" value="@container-tablet" data-var="@container-sm" class="form-control"/>
+    <p class="help-block">For <code>@screen-sm-min</code> and up.</p>
+  </div>
+  <div class="bs-customizer-input">
+    <label for="input-@container-desktop">@container-desktop</label>
+    <input id="input-@container-desktop" type="text" value="((940px + @grid-gutter-width))" data-var="@container-desktop" class="form-control"/>
+  </div>
+  <div class="bs-customizer-input">
+    <label for="input-@container-md">@container-md</label>
+    <input id="input-@container-md" type="text" value="@container-desktop" data-var="@container-md" class="form-control"/>
+    <p class="help-block">For <code>@screen-md-min</code> and up.</p>
+  </div>
+  <div class="bs-customizer-input">
+    <label for="input-@container-large-desktop">@container-large-desktop</label>
+    <input id="input-@container-large-desktop" type="text" value="((1140px + @grid-gutter-width))" data-var="@container-large-desktop" class="form-control"/>
+  </div>
+  <div class="bs-customizer-input">
+    <label for="input-@container-lg">@container-lg</label>
+    <input id="input-@container-lg" type="text" value="@container-large-desktop" data-var="@container-lg" class="form-control"/>
+    <p class="help-block">For <code>@screen-lg-min</code> and up.</p>
+  </div>
+</div>
 <h2 id="navbar">Navbar</h2>
 <p></p>
 <div class="row">
   <div class="bs-customizer-input">
     <label for="input-@navbar-height">@navbar-height</label>
-    <input id="input-@navbar-height" type="text" value="50px" data-var="@navbar-height" class="form-control"/>
+    <input id="input-@navbar-height" type="text" value="80px" data-var="@navbar-height" class="form-control"/>
   </div>
   <div class="bs-customizer-input">
     <label for="input-@navbar-margin-bottom">@navbar-margin-bottom</label>
@@ -601,11 +632,11 @@
   </div>
   <div class="bs-customizer-input">
     <label for="input-@navbar-default-color">@navbar-default-color</label>
-    <input id="input-@navbar-default-color" type="text" value="#777" data-var="@navbar-default-color" class="form-control"/>
+    <input id="input-@navbar-default-color" type="text" value="#999999" data-var="@navbar-default-color" class="form-control"/>
   </div>
   <div class="bs-customizer-input">
     <label for="input-@navbar-default-bg">@navbar-default-bg</label>
-    <input id="input-@navbar-default-bg" type="text" value="#f8f8f8" data-var="@navbar-default-bg" class="form-control"/>
+    <input id="input-@navbar-default-bg" type="text" value="#721b1e" data-var="@navbar-default-bg" class="form-control"/>
   </div>
   <div class="bs-customizer-input">
     <label for="input-@navbar-default-border">@navbar-default-border</label>
@@ -613,19 +644,19 @@
   </div>
   <div class="bs-customizer-input">
     <label for="input-@navbar-default-link-color">@navbar-default-link-color</label>
-    <input id="input-@navbar-default-link-color" type="text" value="#777" data-var="@navbar-default-link-color" class="form-control"/>
+    <input id="input-@navbar-default-link-color" type="text" value="#ffffff" data-var="@navbar-default-link-color" class="form-control"/>
   </div>
   <div class="bs-customizer-input">
     <label for="input-@navbar-default-link-hover-color">@navbar-default-link-hover-color</label>
-    <input id="input-@navbar-default-link-hover-color" type="text" value="#333" data-var="@navbar-default-link-hover-color" class="form-control"/>
+    <input id="input-@navbar-default-link-hover-color" type="text" value="#ffffff" data-var="@navbar-default-link-hover-color" class="form-control"/>
   </div>
   <div class="bs-customizer-input">
     <label for="input-@navbar-default-link-hover-bg">@navbar-default-link-hover-bg</label>
-    <input id="input-@navbar-default-link-hover-bg" type="text" value="transparent" data-var="@navbar-default-link-hover-bg" class="form-control"/>
+    <input id="input-@navbar-default-link-hover-bg" type="text" value="#eeeeee" data-var="@navbar-default-link-hover-bg" class="form-control"/>
   </div>
   <div class="bs-customizer-input">
     <label for="input-@navbar-default-link-active-color">@navbar-default-link-active-color</label>
-    <input id="input-@navbar-default-link-active-color" type="text" value="#555" data-var="@navbar-default-link-active-color" class="form-control"/>
+    <input id="input-@navbar-default-link-active-color" type="text" value="#ffffff" data-var="@navbar-default-link-active-color" class="form-control"/>
   </div>
   <div class="bs-customizer-input">
     <label for="input-@navbar-default-link-active-bg">@navbar-default-link-active-bg</label>
@@ -1037,12 +1068,12 @@
   </div>
   <div class="bs-customizer-input">
     <label for="input-@popover-arrow-outer-color">@popover-arrow-outer-color</label>
-    <input id="input-@popover-arrow-outer-color" type="text" value="rgba(0,0,0,.25)" data-var="@popover-arrow-outer-color" class="form-control"/>
+    <input id="input-@popover-arrow-outer-color" type="text" value="fadein(@popover-border-color, 5%)" data-var="@popover-arrow-outer-color" class="form-control"/>
     <p class="help-block">Popover outer arrow color</p>
   </div>
   <div class="bs-customizer-input">
     <label for="input-@popover-arrow-outer-fallback-color">@popover-arrow-outer-fallback-color</label>
-    <input id="input-@popover-arrow-outer-fallback-color" type="text" value="#999" data-var="@popover-arrow-outer-fallback-color" class="form-control"/>
+    <input id="input-@popover-arrow-outer-fallback-color" type="text" value="darken(@popover-fallback-border-color, 20%)" data-var="@popover-arrow-outer-fallback-color" class="form-control"/>
     <p class="help-block">Popover outer arrow fallback color</p>
   </div>
 </div>
@@ -1632,6 +1663,11 @@
     <p class="help-block">Blockquote small color</p>
   </div>
   <div class="bs-customizer-input">
+    <label for="input-@blockquote-font-size">@blockquote-font-size</label>
+    <input id="input-@blockquote-font-size" type="text" value="(@font-size-base * 1.25)" data-var="@blockquote-font-size" class="form-control"/>
+    <p class="help-block">Blockquote font size</p>
+  </div>
+  <div class="bs-customizer-input">
     <label for="input-@blockquote-border-color">@blockquote-border-color</label>
     <input id="input-@blockquote-border-color" type="text" value="@gray-lighter" data-var="@blockquote-border-color" class="form-control"/>
     <p class="help-block">Blockquote border color</p>
@@ -1654,37 +1690,6 @@
     <label for="input-@component-offset-horizontal">@component-offset-horizontal</label>
     <input id="input-@component-offset-horizontal" type="text" value="180px" data-var="@component-offset-horizontal" class="form-control"/>
     <p class="help-block">Horizontal offset for forms and lists.</p>
-  </div>
-</div>
-<h2 id="container-sizes">Container sizes</h2>
-<p>Define the maximum width of <code>.container</code> for different screen sizes.</p>
-<div class="row">
-  <div class="bs-customizer-input">
-    <label for="input-@container-tablet">@container-tablet</label>
-    <input id="input-@container-tablet" type="text" value="((720px + @grid-gutter-width))" data-var="@container-tablet" class="form-control"/>
-  </div>
-  <div class="bs-customizer-input">
-    <label for="input-@container-sm">@container-sm</label>
-    <input id="input-@container-sm" type="text" value="@container-tablet" data-var="@container-sm" class="form-control"/>
-    <p class="help-block">For <code>@screen-sm-min</code> and up.</p>
-  </div>
-  <div class="bs-customizer-input">
-    <label for="input-@container-desktop">@container-desktop</label>
-    <input id="input-@container-desktop" type="text" value="((940px + @grid-gutter-width))" data-var="@container-desktop" class="form-control"/>
-  </div>
-  <div class="bs-customizer-input">
-    <label for="input-@container-md">@container-md</label>
-    <input id="input-@container-md" type="text" value="@container-desktop" data-var="@container-md" class="form-control"/>
-    <p class="help-block">For <code>@screen-md-min</code> and up.</p>
-  </div>
-  <div class="bs-customizer-input">
-    <label for="input-@container-large-desktop">@container-large-desktop</label>
-    <input id="input-@container-large-desktop" type="text" value="((1140px + @grid-gutter-width))" data-var="@container-large-desktop" class="form-control"/>
-  </div>
-  <div class="bs-customizer-input">
-    <label for="input-@container-lg">@container-lg</label>
-    <input id="input-@container-lg" type="text" value="@container-large-desktop" data-var="@container-lg" class="form-control"/>
-    <p class="help-block">For <code>@screen-lg-min</code> and up.</p>
   </div>
 </div>
 <!-- NOTE: DO NOT EDIT THE PRECEDING SECTION DIRECTLY! It is autogenerated via the `build-customizer-html` Grunt task using the customizer-variables.jade template.-->
