Borland brand style customizations: page-header

--- a/less/variables.less
+++ b/less/variables.less
@@ -815,7 +815,7 @@
 //** Blockquote border color
 @blockquote-border-color:     @gray-lighter;
 //** Page header border color
-@page-header-border-color:    @gray-lighter;
+@page-header-border-color:    rgb(212, 222, 187);
 
 
 //== Miscellaneous
