--- a/less/type.less
+++ b/less/type.less
@@ -134,9 +134,9 @@ cite    { font-style: normal; }
 // -------------------------
 
 .page-header {
-  padding-bottom: ((@line-height-computed / 2) - 1);
+  padding-bottom: 1px;
   margin: (@line-height-computed * 2) 0 @line-height-computed;
-  border-bottom: 1px solid @page-header-border-color;
+  border-bottom: 1px dashed @page-header-border-color;
 }
 
 
