Customized build assets

--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -1674,7 +1674,7 @@
   </div>
   <div class="bs-customizer-input">
     <label for="input-@page-header-border-color">@page-header-border-color</label>
-    <input id="input-@page-header-border-color" type="text" value="@gray-lighter" data-var="@page-header-border-color" class="form-control"/>
+    <input id="input-@page-header-border-color" type="text" value="rgb(212, 222, 187)" data-var="@page-header-border-color" class="form-control"/>
     <p class="help-block">Page header border color</p>
   </div>
 </div>
